INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(mt2calculator_SRC mt2calculator.cc mt2calculator_c.cc)
ADD_LIBRARY(mt2calculator SHARED ${mt2calculator_SRC})
TARGET_LINK_LIBRARIES(mt2calculator ${ROOT_LIBRARIES})
SET(LIBRARY_TARGET ${LIBRARY_TARGET} mt2calculator)

SET(mt2test_SRC mt2test.c)
add_executable(mt2test ${mt2test_SRC})
TARGET_LINK_LIBRARIES(mt2test mt2calculator)
SET(EXECUTABLE_TARGET ${EXECUTABLE_TARGET} mt2test)
SET_TARGET_PROPERTIES(mt2test PROPERTIES INSTALL_RPATH "@loader_path/../lib")

INSTALL(TARGETS ${EXECUTABLE_TARGET} ${LIBRARY_TARGET}
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)

FILE(GLOB HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
INSTALL(FILES ${HEADERS} DESTINATION include/${CMAKE_PROJECT_NAME})